--- a/src/resources/styles/main.scss
+++ b/src/resources/styles/main.scss
@@ -1,4 +1,4 @@
-a {
-	text-decoration: none;
-	color: red;
-}
+@import "../styles/variables.scss";
+@import "../styles/login-form.scss";
+@import "../styles/reset.scss";
+@import "../styles/inputs.scss";
