--- a/src/resources/styles/_login-form.scss
+++ b/src/resources/styles/_login-form.scss
@@ -5,13 +5,8 @@
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-}
-
-.login_page_container {
-	width: 70%;
-	height: 100%;
-	margin: auto;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
@@ -31,6 +26,19 @@
 		display: flex;
 		flex-direction: column;
 	}
+}
+.login_page_header {
+	width: 100vw;
+	height: auto;
+	background-color: transparent;
+	position: absolute;
+	top: 0;
+	display: flex;
+}
+.logo_wrapper {
+	width: 70vw;
+	height: 100%;
+	margin: auto;
 }
 
 .form_header {
@@ -54,7 +62,7 @@
 }
 
 .password_btn {
-	background-color: inherit;
+	background-color: transparent;
 	border: none;
 	color: white;
 }
