installed react router

--- a/src/resources/styles/main.scss
+++ b/src/resources/styles/main.scss
@@ -2,3 +2,5 @@
 @import "../styles/login-form.scss";
 @import "../styles/reset.scss";
 @import "../styles/inputs.scss";
+@import "../styles/homepage";
+@import "../styles/nav-bar";
